--- a/JavaScript/src/App.css
+++ b/JavaScript/src/App.css
@@ -34,7 +34,7 @@ h1{
 }
 .tasks-principal-container{
     width: 50%;
-    height: 500px;
+    min-height: 500px;
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 25px;
     border: 0.1px solid white;
