--- a/JavaScript/src/Style/Task.css
+++ b/JavaScript/src/Style/Task.css
@@ -6,7 +6,6 @@
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 50px;
   border-radius: 0 25px 25px 0;
   margin-top: 25px;
 }
@@ -16,6 +15,8 @@
   margin-left: 25px;
   cursor: pointer;
   color: rgb(56, 55, 55);
+  overflow-wrap: break-word;
+  padding: 10px;
 }
 .task-icon-container{
   width: 50px;
