--- a/TypeScript/src/App.css
+++ b/TypeScript/src/App.css
@@ -28,7 +28,7 @@
   align-items: center;
   flex-direction: column;
   min-height: 500px;
-  width: 1000px;
+  width: 80%;
   background-color: white;
   border-radius: 15px;
 }
